--- a/Dusza-Fogadas/NewGame.xaml
+++ b/Dusza-Fogadas/NewGame.xaml
@@ -6,6 +6,30 @@
         xmlns:local="clr-namespace:Dusza_Fogadas"
         mc:Ignorable="d"
         Title="NewGame" Height="600" Width="775">
+
+    <Window.Resources>
+        <ControlTemplate x:Key="txtTemplate" TargetType="{x:Type TextBoxBase}">
+            <Border x:Name="Bd" CornerRadius="5" BorderBrush="#6b6b6b" BorderThickness="1" Background="#e6e6e6">
+
+            </Border>
+
+            <ControlTemplate.Triggers>
+                <Trigger Property="IsEnabled" Value="False">
+                    <Setter Property="Background" Value="{DynamicResource {x:Static SystemColors.ControlBrushKey}}" TargetName="Bd"/>
+                    <Setter Property="Foreground" Value="{DynamicResource {x:Static SystemColors.GrayTextBrushKey}}"/>
+                </Trigger>
+                <Trigger Property="Width" Value="Auto">
+                    <Setter Property="MinWidth" Value="100"/>
+                </Trigger>
+                <Trigger Property="Height" Value="Auto">
+                    <Setter Property="MinHeight" Value="20"/>
+                </Trigger>
+            </ControlTemplate.Triggers>
+        </ControlTemplate>
+    </Window.Resources>
+
+
+
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="1.3*"></RowDefinition>
@@ -26,34 +50,82 @@
             Grid.ColumnSpan="2"/>
 
         <StackPanel Margin="0 15 0 0" Orientation="Horizontal" Grid.Row="1" Grid.ColumnSpan="2" HorizontalAlignment="Center" VerticalAlignment="Center">
-            <Label FontSize="25" Margin="0 0 15 0">Game Name:</Label>
-            <TextBox x:Name="txtGameName" VerticalContentAlignment="Center" FontSize="25" Width="275" Background="LightGray"></TextBox>
+            <Label FontSize="25" FontWeight="Light" Margin="0 0 15 0">Game Name:</Label>
+            <TextBox x:Name="txtGameName" Template="{StaticResource txtTemplate}" VerticalContentAlignment="Center" FontSize="25" Width="275" Background="LightGray"></TextBox>
         </StackPanel>
 
 
-        <Label FontSize="25" Grid.Row="2" HorizontalAlignment="Center" VerticalAlignment="Center">Subjects</Label>
+        <Label FontSize="25" Grid.Row="2" FontWeight="Light" HorizontalAlignment="Center" VerticalAlignment="Center">Subjects</Label>
 
         <DockPanel Grid.Row="3" HorizontalAlignment="Stretch" VerticalAlignment="Center" Margin="15 0 15 0">
-            <Button x:Name="btnSubjectAdd" Width="30" Height="30" DockPanel.Dock="Right" Click="btnSubjectAdd_Click">+</Button>
-            <TextBox x:Name="txtSubject" Margin="0 0 15 0" VerticalContentAlignment="Center"/>
+            <Button x:Name="btnSubjectAdd" Width="30" Margin="0 0 5 0" Height="30" DockPanel.Dock="Right" Click="btnSubjectAdd_Click">+
+                <Button.Resources>
+                    <Style TargetType="{x:Type Border}">
+                        <Setter Property="CornerRadius" Value="5"/>
+                    </Style>
+                </Button.Resources>
+                <Button.Style>
+                    <Style TargetType="{x:Type Button}">
+                        <Setter Property="Template">
+                            <Setter.Value>
+                                <ControlTemplate TargetType="{x:Type Button}">
+                                    <Border x:Name="Border" BorderThickness="1" BorderBrush="#6b6b6b" Background="{TemplateBinding Background}">
+                                        <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" />
+                                    </Border>
+                                    <ControlTemplate.Triggers>
+                                        <Trigger Property="IsMouseOver" Value="True">
+                                            <Setter Property="Background" Value="#d1d1d1" TargetName="Border" />
+                                        </Trigger>
+                                    </ControlTemplate.Triggers>
+                                </ControlTemplate>
+                            </Setter.Value>
+                        </Setter>
+                    </Style>
+                </Button.Style>
+            </Button>
+            <TextBox x:Name="txtSubject" Margin="5 0 15 0" Template="{StaticResource txtTemplate}" VerticalContentAlignment="Center"/>
         </DockPanel>
 
-        <Label FontSize="25" Grid.Row="2" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Center">Events</Label>
+        <Label FontSize="25" FontWeight="Light" Grid.Row="2" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Center">Events</Label>
 
         <DockPanel Grid.Row="3" Grid.Column="1" HorizontalAlignment="Stretch" VerticalAlignment="Center" Margin="15 0 15 0">
-            <Button x:Name="btnEventAdd" Width="30" Height="30" DockPanel.Dock="Right" Click="btnEventAdd_Click">+</Button>
-            <TextBox x:Name="txtEvent" Margin="0 0 15 0" VerticalContentAlignment="Center"/>
+            <Button x:Name="btnEventAdd" Width="30" Margin="0 0 5 0" Height="30" DockPanel.Dock="Right" Click="btnEventAdd_Click">+
+                <Button.Resources>
+                    <Style TargetType="{x:Type Border}">
+                        <Setter Property="CornerRadius" Value="5"/>
+                    </Style>
+                </Button.Resources>
+                <Button.Style>
+                    <Style TargetType="{x:Type Button}">
+                        <Setter Property="Template">
+                            <Setter.Value>
+                                <ControlTemplate TargetType="{x:Type Button}">
+                                    <Border x:Name="Border" BorderThickness="1" BorderBrush="#6b6b6b" Background="{TemplateBinding Background}">
+                                        <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" />
+                                    </Border>
+                                    <ControlTemplate.Triggers>
+                                        <Trigger Property="IsMouseOver" Value="True">
+                                            <Setter Property="Background" Value="#d1d1d1" TargetName="Border" />
+                                        </Trigger>
+                                    </ControlTemplate.Triggers>
+                                </ControlTemplate>
+                            </Setter.Value>
+                        </Setter>
+                    </Style>
+                </Button.Style>
+            </Button>
+            <TextBox x:Name="txtEvent" Margin="5 0 15 0 " Template="{StaticResource txtTemplate}" VerticalContentAlignment="Center"/>
         </DockPanel>
 
 
-        <ListBox x:Name="lbSubjects" Grid.Row="4" Background="LightGray" Margin="20 10 20 10">
+        <ListBox x:Name="lbSubjects" Grid.Row="4" FontWeight="Light" Background="LightGray" Margin="20 10 20 10">
             <ListBox.ItemContainerStyle>
                 <Style TargetType="ListBoxItem">
                     <EventSetter Event="MouseDoubleClick" Handler="lbSubjects_MouseDoubleClick"/>
                 </Style>
             </ListBox.ItemContainerStyle>
         </ListBox>
-        <ListBox x:Name="lbEvents" Grid.Row="4" Grid.Column="1" Background="LightGray" Margin="20 10 20 10">
+        <ListBox x:Name="lbEvents" Grid.Row="4" Grid.Column="1" FontWeight="Light" Background="LightGray" Margin="20 10 20 10">
             <ListBox.ItemContainerStyle>
                 <Style TargetType="ListBoxItem">
                     <EventSetter Event="MouseDoubleClick" Handler="lbEvents_MouseDoubleClick"/>
@@ -61,6 +133,30 @@
             </ListBox.ItemContainerStyle>
         </ListBox>
 
-        <Button x:Name="btnCreateGame" Click="btnCreateGame_Click" Width="200" Height="55" FontSize="20" Grid.Row="5" Grid.ColumnSpan="2">Create Game</Button>
+        <Button x:Name="btnCreateGame" Background="#e6e6e6" FontWeight="Light" Click="btnCreateGame_Click" Width="200" Height="55" FontSize="20" Grid.Row="5" Grid.ColumnSpan="2">Create Game
+            <Button.Resources>
+                <Style TargetType="{x:Type Border}">
+                    <Setter Property="CornerRadius" Value="5"/>
+                </Style>
+            </Button.Resources>
+            <Button.Style>
+                <Style TargetType="{x:Type Button}">
+                    <Setter Property="Template">
+                        <Setter.Value>
+                            <ControlTemplate TargetType="{x:Type Button}">
+                                <Border x:Name="Border" BorderThickness="1" BorderBrush="#6b6b6b" Background="{TemplateBinding Background}">
+                                    <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" />
+                                </Border>
+                                <ControlTemplate.Triggers>
+                                    <Trigger Property="IsMouseOver" Value="True">
+                                        <Setter Property="Background" Value="#d1d1d1" TargetName="Border" />
+                                    </Trigger>
+                                </ControlTemplate.Triggers>
+                            </ControlTemplate>
+                        </Setter.Value>
+                    </Setter>
+                </Style>
+            </Button.Style>
+        </Button>
     </Grid>
 </Window>
