--- a/Dusza-Fogadas/Header.xaml
+++ b/Dusza-Fogadas/Header.xaml
@@ -8,7 +8,7 @@
              d:DesignHeight="100" d:DesignWidth="800"
              Background="White"
              Loaded="UserControl_Loaded">
-    <Grid>
+    <Grid Background="#f5f5f5">
         <Grid.ColumnDefinitions>
             <ColumnDefinition></ColumnDefinition>
             <ColumnDefinition></ColumnDefinition>
@@ -19,31 +19,59 @@
         </Grid.ColumnDefinitions>
 
         <Label x:Name="lblTitle"
-               VerticalAlignment="Center"
-               Margin="15 0 0 0"
-               FontSize="30"
-               Grid.ColumnSpan="3">
+           VerticalAlignment="Center"
+           Margin="15 0 0 0"
+           FontSize="27"
+           Grid.ColumnSpan="3">
             Title
         </Label>
         <Label x:Name="lblUsername"
-               Grid.Column="3"
-               HorizontalAlignment="Center"
-               VerticalAlignment="Center"
-               FontSize="20">Username</Label>
+           Grid.Column="3"
+           HorizontalAlignment="Center"
+           VerticalAlignment="Center"
+           FontSize="23"
+           FontWeight="Light">Username</Label>
         <Label x:Name="lblPoints"
-               Grid.Column="4"
-               HorizontalAlignment="Center"
-               VerticalAlignment="Center"
-               FontSize="20"></Label>
+           Grid.Column="4"
+           HorizontalAlignment="Center"
+           VerticalAlignment="Center"
+           FontSize="20"
+           FontWeight="Light"></Label>
         <Button x:Name="btnBackToMenu"
-                Grid.Column="5"
-                Width="60"
-                Height="60"
-                FontSize="15"
-                Click="btnBackToMenu_Click">Menu</Button>
+            Grid.Column="5"
+            Width="60"
+            Height="60"
+            FontSize="17"
+            FontWeight="Light"
+            Background="#e6e6e6"
+            Click="btnBackToMenu_Click">Menu
+            <Button.Resources>
+                <Style TargetType="{x:Type Border}">
+                    <Setter Property="CornerRadius" Value="3"/>
+                </Style>
+            </Button.Resources>
+            <Button.Style>
+                <Style TargetType="{x:Type Button}">
+                    <Setter Property="Template">
+                        <Setter.Value>
+                            <ControlTemplate TargetType="{x:Type Button}">
+                                <Border x:Name="Border" BorderThickness="1" BorderBrush="#6b6b6b" Background="{TemplateBinding Background}">
+                                    <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" />
+                                </Border>
+                                <ControlTemplate.Triggers>
+                                    <Trigger Property="IsMouseOver" Value="True">
+                                        <Setter Property="Background" Value="#d1d1d1" TargetName="Border" />
+                                    </Trigger>
+                                </ControlTemplate.Triggers>
+                            </ControlTemplate>
+                        </Setter.Value>
+                    </Setter>
+                </Style>
+            </Button.Style>
+        </Button>
         <Border BorderThickness="0 0 0 1"
-                BorderBrush="Black"
-                Grid.ColumnSpan="6"></Border>
+            BorderBrush="Black"
+            Grid.ColumnSpan="6"></Border>
 
     </Grid>
 </UserControl>
