--- a/Dusza-Fogadas/Statistics.xaml
+++ b/Dusza-Fogadas/Statistics.xaml
@@ -1,33 +1,32 @@
-﻿<Window x:Class="Dusza_Fogadas.Menu"
+﻿<Window x:Class="Dusza_Fogadas.Statistics"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Dusza_Fogadas"
         mc:Ignorable="d"
-        Title="Menu" Height="670" Width="470">
-
-
+        Title="Statistics" Height="670" Width="470">
     <Border BorderBrush="#2b2b2b" Background="#f5f5f5" Padding="0 0 0 10" BorderThickness="1.5" Height="550" Width="370" CornerRadius="7">
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="auto"></RowDefinition>
-            <RowDefinition Height="*"></RowDefinition>
-        </Grid.RowDefinitions>
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="auto"></RowDefinition>
+                <RowDefinition Height="*"></RowDefinition>
+            </Grid.RowDefinitions>
 
-        <Label Padding="0 10 0 10" HorizontalAlignment="Center" FontSize="30" VerticalAlignment="Center">Main Menu</Label>
-       
+            <Label Padding="0 10 0 10" HorizontalAlignment="Center" FontSize="30" VerticalAlignment="Center">Statistics</Label>
 
-        <DockPanel Grid.Row="1" VerticalAlignment="Stretch" LastChildFill="False">
-            <Button x:Name="btnNewGame" Click="btnNewGame_Click" DockPanel.Dock="Top"
-                    VerticalAlignment="Center" 
-                    Height="50" 
-                    HorizontalAlignment="Stretch" 
-                    FontSize="25"
-                    HorizontalContentAlignment="Center"
-                    Margin="20 25 20 15"
-                    Background="#e6e6e6"
-                    FontWeight="Light">Create new Game
+
+            <DockPanel Grid.Row="1" VerticalAlignment="Stretch" LastChildFill="False">
+
+                <Button x:Name="btnRankings" Click="btnRankings_Click" DockPanel.Dock="Top"
+                VerticalAlignment="Center" 
+                Height="50" 
+                HorizontalAlignment="Stretch" 
+                FontSize="25"
+                HorizontalContentAlignment="Center"
+                Margin="20 25 20 15"
+                Background="#e6e6e6"
+                FontWeight="Light">Rankings
                     <Button.Resources>
                         <Style TargetType="{x:Type Border}">
                             <Setter Property="CornerRadius" Value="5"/>
@@ -53,15 +52,15 @@
                     </Button.Style>
                 </Button>
 
-            <Button x:Name="btnBet" Click="btnBet_Click" DockPanel.Dock="Top"
-                    VerticalAlignment="Center" 
-                    Height="50" 
-                    HorizontalAlignment="Stretch" 
-                    FontSize="25"
-                    HorizontalContentAlignment="Center"
-                    Margin="20 0 20 15"
-                    Background="#e6e6e6"
-                    FontWeight="Light">Make a bet
+                <Button x:Name="btnGameStatistics" Click="btnGameStatistics_Click"  DockPanel.Dock="Top"
+                VerticalAlignment="Center" 
+                Height="50" 
+                HorizontalAlignment="Stretch" 
+                FontSize="25"
+                HorizontalContentAlignment="Center"
+                Margin="20 0 20 15"
+                Background="#e6e6e6"
+                FontWeight="Light">Game Statistics
                     <Button.Resources>
                         <Style TargetType="{x:Type Border}">
                             <Setter Property="CornerRadius" Value="5"/>
@@ -87,52 +86,15 @@
                     </Button.Style>
                 </Button>
 
-            <Button x:Name="btnEndGame" Click="btnEndGame_Click" DockPanel.Dock="Top"
-                    VerticalAlignment="Center" 
-                    Height="50" 
-                    HorizontalAlignment="Stretch" 
-                    FontSize="25"
-                    HorizontalContentAlignment="Center"
-                    Margin="20 0 20 15"
-                    Background="#e6e6e6"
-                    FontWeight="Light">End a Game
-                    <Button.Resources>
-                        <Style TargetType="{x:Type Border}">
-                            <Setter Property="CornerRadius" Value="5"/>
-                        </Style>
-                    </Button.Resources>
-                    <Button.Style>
-                        <Style TargetType="{x:Type Button}">
-                            <Setter Property="Template">
-                                <Setter.Value>
-                                    <ControlTemplate TargetType="{x:Type Button}">
-                                        <Border x:Name="Border" BorderThickness="1" BorderBrush="#6b6b6b" Background="{TemplateBinding Background}">
-                                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" />
-                                        </Border>
-                                        <ControlTemplate.Triggers>
-                                            <Trigger Property="IsMouseOver" Value="True">
-                                                <Setter Property="Background" Value="#d1d1d1" TargetName="Border" />
-                                            </Trigger>
-                                        </ControlTemplate.Triggers>
-                                    </ControlTemplate>
-                                </Setter.Value>
-                            </Setter>
-                        </Style>
-                    </Button.Style>
-                </Button>
-            
-          
-            <Button x:Name="btnStatistics"
-                    Click="btnStatistics_Click"
-                    DockPanel.Dock="Top"
-                    VerticalAlignment="Center" 
-                    Height="50" 
-                    HorizontalAlignment="Stretch" 
-                    FontSize="25"
-                    HorizontalContentAlignment="Center"
-                    Margin="20 0 20 15"
-                    Background="#e6e6e6"
-                    FontWeight="Light">Statistics
+                <Button x:Name="btnBetStatistics" Click="btnBetStatistics_Click" DockPanel.Dock="Top"
+                VerticalAlignment="Center" 
+                Height="50" 
+                HorizontalAlignment="Stretch" 
+                FontSize="25"
+                HorizontalContentAlignment="Center"
+                Margin="20 0 20 15"
+                Background="#e6e6e6"
+                FontWeight="Light">Bet Statistics
                     <Button.Resources>
                         <Style TargetType="{x:Type Border}">
                             <Setter Property="CornerRadius" Value="5"/>
@@ -158,16 +120,17 @@
                     </Button.Style>
                 </Button>
 
-            <Button x:Name="btnExit" Click="btnExit_Click" DockPanel.Dock="Bottom"
-                    VerticalAlignment="Center" 
-                    Height="50" 
-                    HorizontalAlignment="Stretch" 
-                    FontSize="25"
-                    HorizontalContentAlignment="Center"
-                    Margin="50 0 50 15"
-                    Background="#cc4141"
-                    Foreground="#e6e6e6"
-                    FontWeight="Light">Exit
+
+                <Button x:Name="btnExit" Click="btnExit_Click" DockPanel.Dock="Bottom"
+                VerticalAlignment="Center" 
+                Height="50" 
+                HorizontalAlignment="Stretch" 
+                FontSize="25"
+                HorizontalContentAlignment="Center"
+                Margin="50 0 50 15"
+                Background="#cc4141"
+                Foreground="#e6e6e6"
+                FontWeight="Light">Exit
                     <Button.Resources>
                         <Style TargetType="{x:Type Border}">
                             <Setter Property="CornerRadius" Value="5"/>
@@ -193,16 +156,16 @@
                     </Button.Style>
                 </Button>
 
-            <Button x:Name="btnLogOut" Click="btnLogOut_Click" DockPanel.Dock="Bottom"
-                    VerticalAlignment="Center" 
-                    Height="50" 
-                    HorizontalAlignment="Stretch" 
-                    FontSize="25"
-                    Margin="50 0 50 15"
-                    Background="#cc4141"
-                    Foreground="#e6e6e6"
-                    HorizontalContentAlignment="Center"
-                    FontWeight="Light">Log out
+                <Button x:Name="btnMainMenu" Click="btnMainMenu_Click" DockPanel.Dock="Bottom"
+                VerticalAlignment="Center" 
+                Height="50" 
+                HorizontalAlignment="Stretch" 
+                FontSize="25"
+                Margin="50 0 50 15"
+                Background="#cc4141"
+                Foreground="#e6e6e6"
+                HorizontalContentAlignment="Center"
+                FontWeight="Light">Back to main Menu
                     <Button.Resources>
                         <Style TargetType="{x:Type Border}">
                             <Setter Property="CornerRadius" Value="5"/>
@@ -227,8 +190,8 @@
                         </Style>
                     </Button.Style>
                 </Button>
-        </DockPanel>
-        
-    </Grid>
+            </DockPanel>
+
+        </Grid>
     </Border>
 </Window>
