--- a/Dusza-Fogadas/Statistics.xaml
+++ b/Dusza-Fogadas/Statistics.xaml
@@ -6,6 +6,40 @@
         xmlns:local="clr-namespace:Dusza_Fogadas"
         mc:Ignorable="d"
         Title="Statistics" Height="670" Width="470">
+
+    <Window.Resources>
+        <ControlTemplate x:Key="normalButton" TargetType="{x:Type Button}">
+            <Border x:Name="Border" 
+            Background="#e6e6e6"
+            BorderThickness="1" 
+            BorderBrush="#6b6b6b"
+            CornerRadius="5">
+                <ContentPresenter VerticalAlignment="Center" HorizontalAlignment="Center" Content="{TemplateBinding Content}"/>
+            </Border>
+            <ControlTemplate.Triggers>
+                <Trigger Property="IsMouseOver" Value="True">
+                    <Setter Property="Background" Value="#d1d1d1" TargetName="Border" />
+                </Trigger>
+            </ControlTemplate.Triggers>
+        </ControlTemplate>
+
+        <ControlTemplate x:Key="exitButton" TargetType="{x:Type Button}">
+            <Border x:Name="Border" 
+            Background="#cc4141"
+            BorderThickness="1" 
+            BorderBrush="#6b6b6b"
+            CornerRadius="5">
+                <ContentPresenter VerticalAlignment="Center" HorizontalAlignment="Center" Content="{TemplateBinding Content}"/>
+            </Border>
+            <ControlTemplate.Triggers>
+                <Trigger Property="IsMouseOver" Value="True">
+                    <Setter Property="Background" Value="#de4747" TargetName="Border" />
+                </Trigger>
+            </ControlTemplate.Triggers>
+        </ControlTemplate>
+    </Window.Resources>
+    
+    
     <Border BorderBrush="#2b2b2b" Background="#f5f5f5" Padding="0 0 0 10" BorderThickness="1.5" Height="550" Width="370" CornerRadius="7">
         <Grid>
             <Grid.RowDefinitions>
@@ -23,33 +57,9 @@
                 Height="50" 
                 HorizontalAlignment="Stretch" 
                 FontSize="25"
-                HorizontalContentAlignment="Center"
                 Margin="20 25 20 15"
-                Background="#e6e6e6"
-                FontWeight="Light">Rankings
-                    <Button.Resources>
-                        <Style TargetType="{x:Type Border}">
-                            <Setter Property="CornerRadius" Value="5"/>
-                        </Style>
-                    </Button.Resources>
-                    <Button.Style>
-                        <Style TargetType="{x:Type Button}">
-                            <Setter Property="Template">
-                                <Setter.Value>
-                                    <ControlTemplate TargetType="{x:Type Button}">
-                                        <Border x:Name="Border" BorderThickness="1" BorderBrush="#6b6b6b" Background="{TemplateBinding Background}">
-                                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" />
-                                        </Border>
-                                        <ControlTemplate.Triggers>
-                                            <Trigger Property="IsMouseOver" Value="True">
-                                                <Setter Property="Background" Value="#d1d1d1" TargetName="Border" />
-                                            </Trigger>
-                                        </ControlTemplate.Triggers>
-                                    </ControlTemplate>
-                                </Setter.Value>
-                            </Setter>
-                        </Style>
-                    </Button.Style>
+                FontWeight="Light"
+                Template="{StaticResource normalButton}">Rankings
                 </Button>
 
                 <Button x:Name="btnGameStatistics" Click="btnGameStatistics_Click"  DockPanel.Dock="Top"
@@ -57,33 +67,9 @@
                 Height="50" 
                 HorizontalAlignment="Stretch" 
                 FontSize="25"
-                HorizontalContentAlignment="Center"
                 Margin="20 0 20 15"
-                Background="#e6e6e6"
-                FontWeight="Light">Game Statistics
-                    <Button.Resources>
-                        <Style TargetType="{x:Type Border}">
-                            <Setter Property="CornerRadius" Value="5"/>
-                        </Style>
-                    </Button.Resources>
-                    <Button.Style>
-                        <Style TargetType="{x:Type Button}">
-                            <Setter Property="Template">
-                                <Setter.Value>
-                                    <ControlTemplate TargetType="{x:Type Button}">
-                                        <Border x:Name="Border" BorderThickness="1" BorderBrush="#6b6b6b" Background="{TemplateBinding Background}">
-                                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" />
-                                        </Border>
-                                        <ControlTemplate.Triggers>
-                                            <Trigger Property="IsMouseOver" Value="True">
-                                                <Setter Property="Background" Value="#d1d1d1" TargetName="Border" />
-                                            </Trigger>
-                                        </ControlTemplate.Triggers>
-                                    </ControlTemplate>
-                                </Setter.Value>
-                            </Setter>
-                        </Style>
-                    </Button.Style>
+                FontWeight="Light"
+                Template="{StaticResource normalButton}">Game Statistics
                 </Button>
 
                 <Button x:Name="btnBetStatistics" Click="btnBetStatistics_Click" DockPanel.Dock="Top"
@@ -91,33 +77,9 @@
                 Height="50" 
                 HorizontalAlignment="Stretch" 
                 FontSize="25"
-                HorizontalContentAlignment="Center"
                 Margin="20 0 20 15"
-                Background="#e6e6e6"
-                FontWeight="Light">Bet Statistics
-                    <Button.Resources>
-                        <Style TargetType="{x:Type Border}">
-                            <Setter Property="CornerRadius" Value="5"/>
-                        </Style>
-                    </Button.Resources>
-                    <Button.Style>
-                        <Style TargetType="{x:Type Button}">
-                            <Setter Property="Template">
-                                <Setter.Value>
-                                    <ControlTemplate TargetType="{x:Type Button}">
-                                        <Border x:Name="Border" BorderThickness="1" BorderBrush="#6b6b6b" Background="{TemplateBinding Background}">
-                                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" />
-                                        </Border>
-                                        <ControlTemplate.Triggers>
-                                            <Trigger Property="IsMouseOver" Value="True">
-                                                <Setter Property="Background" Value="#d1d1d1" TargetName="Border" />
-                                            </Trigger>
-                                        </ControlTemplate.Triggers>
-                                    </ControlTemplate>
-                                </Setter.Value>
-                            </Setter>
-                        </Style>
-                    </Button.Style>
+                FontWeight="Light"
+                Template="{StaticResource normalButton}">Bet Statistics                   
                 </Button>
 
 
@@ -126,34 +88,11 @@
                 Height="50" 
                 HorizontalAlignment="Stretch" 
                 FontSize="25"
-                HorizontalContentAlignment="Center"
                 Margin="50 0 50 15"
-                Background="#cc4141"
                 Foreground="#e6e6e6"
-                FontWeight="Light">Exit
-                    <Button.Resources>
-                        <Style TargetType="{x:Type Border}">
-                            <Setter Property="CornerRadius" Value="5"/>
-                        </Style>
-                    </Button.Resources>
-                    <Button.Style>
-                        <Style TargetType="{x:Type Button}">
-                            <Setter Property="Template">
-                                <Setter.Value>
-                                    <ControlTemplate TargetType="{x:Type Button}">
-                                        <Border x:Name="Border" Background="{TemplateBinding Background}">
-                                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" />
-                                        </Border>
-                                        <ControlTemplate.Triggers>
-                                            <Trigger Property="IsMouseOver" Value="True">
-                                                <Setter Property="Background" Value="#de4747" TargetName="Border" />
-                                            </Trigger>
-                                        </ControlTemplate.Triggers>
-                                    </ControlTemplate>
-                                </Setter.Value>
-                            </Setter>
-                        </Style>
-                    </Button.Style>
+                FontWeight="Light"
+                Template="{StaticResource exitButton}">Exit
+                    
                 </Button>
 
                 <Button x:Name="btnMainMenu" Click="btnMainMenu_Click" DockPanel.Dock="Bottom"
@@ -162,33 +101,9 @@
                 HorizontalAlignment="Stretch" 
                 FontSize="25"
                 Margin="50 0 50 15"
-                Background="#cc4141"
                 Foreground="#e6e6e6"
-                HorizontalContentAlignment="Center"
-                FontWeight="Light">Back to main Menu
-                    <Button.Resources>
-                        <Style TargetType="{x:Type Border}">
-                            <Setter Property="CornerRadius" Value="5"/>
-                        </Style>
-                    </Button.Resources>
-                    <Button.Style>
-                        <Style TargetType="{x:Type Button}">
-                            <Setter Property="Template">
-                                <Setter.Value>
-                                    <ControlTemplate TargetType="{x:Type Button}">
-                                        <Border x:Name="Border" Background="{TemplateBinding Background}">
-                                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" />
-                                        </Border>
-                                        <ControlTemplate.Triggers>
-                                            <Trigger Property="IsMouseOver" Value="True">
-                                                <Setter Property="Background" Value="#de4747" TargetName="Border" />
-                                            </Trigger>
-                                        </ControlTemplate.Triggers>
-                                    </ControlTemplate>
-                                </Setter.Value>
-                            </Setter>
-                        </Style>
-                    </Button.Style>
+                FontWeight="Light"
+                Template="{StaticResource exitButton}">Back to main Menu               
                 </Button>
             </DockPanel>
 
